// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maskBorderOutset renders 0 1`] = `
Array [
  .c0 {
  -webkit-mask-border-outset: 0;
  mask-border-outset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: 0;
  mask-border-outset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: 0;
  mask-border-outset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: 0;
  mask-border-outset: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorderOutset renders function 1`] = `
Array [
  .c0 {
  -webkit-mask-border-outset: hasnot;
  mask-border-outset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: has;
  mask-border-outset: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: hasnot;
  mask-border-outset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: has;
  mask-border-outset: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorderOutset renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-border-outset: invalid.path.1;
  mask-border-outset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: invalid.path.1;
  mask-border-outset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: invalid.path.1;
  mask-border-outset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: invalid.path.1;
  mask-border-outset: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorderOutset renders negative number 1`] = `
Array [
  .c0 {
  -webkit-mask-border-outset: -54881px;
  mask-border-outset: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: -54881px;
  mask-border-outset: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: -42365px;
  mask-border-outset: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: -42365px;
  mask-border-outset: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorderOutset renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-mask-border-outset: July;
  mask-border-outset: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: August;
    mask-border-outset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: September;
    mask-border-outset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: November;
    mask-border-outset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-border-outset: August;
    mask-border-outset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: July;
  mask-border-outset: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: August;
    mask-border-outset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: September;
    mask-border-outset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: November;
    mask-border-outset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-border-outset: August;
    mask-border-outset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: January;
  mask-border-outset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: December;
    mask-border-outset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: April;
    mask-border-outset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: May;
    mask-border-outset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-border-outset: June;
    mask-border-outset: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: January;
  mask-border-outset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: December;
    mask-border-outset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: April;
    mask-border-outset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: May;
    mask-border-outset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-border-outset: June;
    mask-border-outset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorderOutset renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: July;
    mask-border-outset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: August;
    mask-border-outset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: September;
    mask-border-outset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-border-outset: November;
    mask-border-outset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: July;
    mask-border-outset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: August;
    mask-border-outset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: September;
    mask-border-outset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-border-outset: November;
    mask-border-outset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: May;
    mask-border-outset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: June;
    mask-border-outset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: April;
    mask-border-outset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-border-outset: November;
    mask-border-outset: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: May;
    mask-border-outset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: June;
    mask-border-outset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border-outset: April;
    mask-border-outset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-border-outset: November;
    mask-border-outset: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorderOutset renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-mask-border-outset: July;
  mask-border-outset: July;
}

@media May {
  .c0 {
    -webkit-mask-border-outset: August;
    mask-border-outset: August;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: September;
    mask-border-outset: September;
  }
}

@media January {
  .c0 {
    -webkit-mask-border-outset: November;
    mask-border-outset: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: August;
    mask-border-outset: August;
  }
}

@media June {
  .c0 {
    -webkit-mask-border-outset: November;
    mask-border-outset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: July;
  mask-border-outset: July;
}

@media May {
  .c0 {
    -webkit-mask-border-outset: August;
    mask-border-outset: August;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: September;
    mask-border-outset: September;
  }
}

@media January {
  .c0 {
    -webkit-mask-border-outset: November;
    mask-border-outset: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: August;
    mask-border-outset: August;
  }
}

@media June {
  .c0 {
    -webkit-mask-border-outset: November;
    mask-border-outset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: April;
  mask-border-outset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-border-outset: November;
    mask-border-outset: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: January;
    mask-border-outset: January;
  }
}

@media January {
  .c0 {
    -webkit-mask-border-outset: December;
    mask-border-outset: December;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: April;
    mask-border-outset: April;
  }
}

@media June {
  .c0 {
    -webkit-mask-border-outset: May;
    mask-border-outset: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: April;
  mask-border-outset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-border-outset: November;
    mask-border-outset: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: January;
    mask-border-outset: January;
  }
}

@media January {
  .c0 {
    -webkit-mask-border-outset: December;
    mask-border-outset: December;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: April;
    mask-border-outset: April;
  }
}

@media June {
  .c0 {
    -webkit-mask-border-outset: May;
    mask-border-outset: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorderOutset renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-mask-border-outset: July;
    mask-border-outset: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: August;
    mask-border-outset: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-border-outset: September;
    mask-border-outset: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: November;
    mask-border-outset: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-border-outset: August;
    mask-border-outset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-mask-border-outset: July;
    mask-border-outset: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: August;
    mask-border-outset: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-border-outset: September;
    mask-border-outset: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: November;
    mask-border-outset: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-border-outset: August;
    mask-border-outset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-border-outset: January;
    mask-border-outset: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: December;
    mask-border-outset: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-border-outset: April;
    mask-border-outset: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: May;
    mask-border-outset: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-border-outset: June;
    mask-border-outset: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-border-outset: January;
    mask-border-outset: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: December;
    mask-border-outset: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-border-outset: April;
    mask-border-outset: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-border-outset: May;
    mask-border-outset: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-border-outset: June;
    mask-border-outset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorderOutset renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-mask-border-outset: 54881px;
  mask-border-outset: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: 54881px;
  mask-border-outset: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: 42365px;
  mask-border-outset: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: 42365px;
  mask-border-outset: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorderOutset renders string 1`] = `
Array [
  .c0 {
  -webkit-mask-border-outset: July;
  mask-border-outset: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: July;
  mask-border-outset: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: June;
  mask-border-outset: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: June;
  mask-border-outset: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorderOutset renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`maskBorderOutset renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-border-outset: DarkSlateBlue;
  mask-border-outset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: DarkSlateBlue;
  mask-border-outset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: DarkSlateBlue;
  mask-border-outset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border-outset: DarkSlateBlue;
  mask-border-outset: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
